--- a/index.html
+++ b/index.html
@@ -462,10 +462,9 @@
 
                 <!-- Company Info -->
                 <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
-                    <h5 class="text-uppercase fw-bold mb-4">Raunak Intermediaries LLP</h5>
+                    <h5 class="text-uppercase fw-bold mb-4">NINE  STAR SYSTEMS</h5>
                     <p>
-                        We deliver natural and effective skincare & personal care products like Aloe Vera Gel, Serums,
-                        Face Wash, and more — combining tradition with science.
+                        We deliver natural and effective skincare & personal care products like Led Light and more — combining tradition with science.
                     </p>
                 </div>
 
@@ -473,11 +472,11 @@
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
                     <h6 class="text-uppercase fw-bold mb-4">Products</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">Aloe Vera Gel</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Face Wash</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Serums</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Shampoo</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Body Wash</a></li>
+                        <li><a href="#" class="text-white text-decoration-none"></a></li>
+                        <li><a href="#" class="text-white text-decoration-none"></a></li>
+                        <li><a href="#" class="text-white text-decoration-none"></a></li>
+                        <li><a href="#" class="text-white text-decoration-none"></a></li>
+                        <li><a href="#" class="text-white text-decoration-none"></a></li>
                     </ul>
                 </div>
 
@@ -496,11 +495,10 @@
                 <!-- Contact Info -->
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                     <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                    <p><i class="bi bi-house-door-fill me-2"></i> 335A Ramachandra layout, Ramnagar, Coimbatore - 641009
+                    <p><i class="bi bi-house-door-fill me-2"></i> B-62 , G.I.D.C ELECTRONICES ESTATE ,NEAR ARMY STORE,Gandhinagar,GUJRAT
                     </p>
-                    <p><i class="bi bi-envelope-fill me-2"></i> raunaknahar@gmail.com</p>
-                    <p><i class="bi bi-telephone-fill me-2"></i> +91 9626107779</p>
-                    <p><i class="bi bi-whatsapp me-2"></i> WhatsApp Us Anytime</p>
+                    <p><i class="bi bi-envelope-fill me-2"></i> Sales.ninestarsystems@gmail.com</p>
+                    <p><i class="bi bi-telephone-fill me-2"></i> +91 8320898933</p>
                 </div>
 
             </div>
@@ -511,7 +509,7 @@
             <!-- Social Media + Copyright -->
             <div class="row align-items-center text-center">
                 <div class="col-md-6 ">
-                    <p class="mb-0 text-center">© 2025 Raunak Intermediaries LLP. All Rights Reserved.</p> <span>Design
+                    <p class="mb-0 text-center">© 2025 NINE  STAR SYSTEMS. All Rights Reserved.</p> <span>Design
                         By <a href="https://trade4export.com/">Trade4Export</a></span>
                 </div>
                 <div class="col-md-6">
