--- a/index.html
+++ b/index.html
@@ -35,52 +35,51 @@
 
   <style>
     .collection-img {
-  width: 100%;
-  height: 250px; /* fixed height */
-  object-fit: cover;
-  border-radius: 8px;
-}
+      width: 100%;
+      height: 250px;
+      /* fixed height */
+      object-fit: cover;
+      border-radius: 8px;
+    }
   </style>
 
-<style>
-  .contact-section-dark {
-  background: #0c0f14;
-}
+  <style>
+    .contact-section-dark {
+      background: #0c0f14;
+    }
 
-.contact-glass-box {
-  background: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(0, 255, 100, 0.2);
-  backdrop-filter: blur(10px);
-  transition: 0.3s ease;
-}
+    .contact-glass-box {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(0, 255, 100, 0.2);
+      backdrop-filter: blur(10px);
+      transition: 0.3s ease;
+    }
 
-.contact-glass-box:hover {
-  border-color: rgba(0, 255, 100, 0.4);
-  box-shadow: 0px 0px 20px rgba(0, 255, 100, 0.2);
-}
+    .contact-glass-box:hover {
+      border-color: rgba(0, 255, 100, 0.4);
+      box-shadow: 0px 0px 20px rgba(0, 255, 100, 0.2);
+    }
 
-.neon-input {
-  background: rgba(255, 255, 255, 0.07);
-  border: 1px solid rgba(0, 255, 100, 0.2);
-  color: #fff;
-  padding: 12px 15px;
-  border-radius: 8px;
-  transition: 0.3s ease;
-}
+    .neon-input {
+      background: rgba(255, 255, 255, 0.07);
+      border: 1px solid rgba(0, 255, 100, 0.2);
+      color: #fff;
+      padding: 12px 15px;
+      border-radius: 8px;
+      transition: 0.3s ease;
+    }
 
-.neon-input::placeholder {
-  color: #bbb;
-}
+    .neon-input::placeholder {
+      color: #bbb;
+    }
 
-.neon-input:focus {
-  background: rgba(255, 255, 255, 0.12);
-  border-color: #0f0;
-  box-shadow: 0 0 8px rgba(0, 255, 100, 0.5);
-  color: #fff;
-}
-
-</style>
-
+    .neon-input:focus {
+      background: rgba(255, 255, 255, 0.12);
+      border-color: #0f0;
+      box-shadow: 0 0 8px rgba(0, 255, 100, 0.5);
+      color: #fff;
+    }
+  </style>
 
 </head>
 
@@ -111,8 +110,12 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">LED LIGHT</a></li>
               <li><a class="dropdown-item" href="#">SOLAR STREET LIGHT</a></li>
-              <li><a class="dropdown-item" href="#">SOLAR WATER HEATER</a></li>
               <li><a class="dropdown-item" href="#">SOLAR ZATKA MACHINE</a></li>
+              <li><a class="dropdown-item" href="#">Voltage Stabilize</a></li>
+              <li><a class="dropdown-item" href="#">Led Garden Light</a></li>
+              <li><a class="dropdown-item" href="#">Mono Solar Panel</a></li>
+              <li><a class="dropdown-item" href="#">Solar Water Heater</a></li>
+              <li><a class="dropdown-item" href="#">Solar Mppt Invertor</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -130,15 +133,15 @@
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/images/Led_high_bay_light.jpeg" style="height:500px; width: auto;" class="d-block w-100"
+        <img src="assets/images/Led_high_bay_light.jpeg" style="height:600px; width: auto;" class="d-block w-100"
           alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/images/Solar_water_heater.jpeg" style="height:500px; width: auto;" class="d-block w-100"
+        <img src="assets/images/Solar_water_heater.jpeg" style="height:600px; width: auto;" class="d-block w-100"
           alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/images/SOLAR-ZATKA-MECHIONR.jpg" style="height:500px; width: auto;" class="d-block w-100"
+        <img src="assets/images/SOLAR-ZATKA-MECHIONR.jpg" style="height:600px; width: auto;" class="d-block w-100"
           alt="...">
       </div>
     </div>
@@ -210,7 +213,7 @@
 
       <div class="row justify-content-center g-4">
 
-        <!-- Product Card -->
+        <!-- Product Card 1 -->
         <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-card h-100">
             <img src="assets/images/Led_high_bay_light.jpeg" class="card-img-top" alt="LED Light">
@@ -224,7 +227,7 @@
           </div>
         </div>
 
-        <!-- Product Card -->
+        <!-- Product Card 2 -->
         <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="150">
           <div class="product-card h-100">
             <img src="assets/images/SOLAR-STREET-LIGHT.jpg" class="card-img-top" alt="Solar Street Light">
@@ -238,12 +241,12 @@
           </div>
         </div>
 
-        <!-- Product Card -->
-        <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="200">
+        <!-- Product Card 3 -->
+        <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="250">
           <div class="product-card h-100">
-            <img src="assets/images/Solar_water_heater.jpeg" class="card-img-top" alt="Solar Water Heater">
+            <img src="assets/images/SOLAR-ZATKA-MECHIONR.jpg" class="card-img-top" alt="Solar Zatka Machine">
             <div class="card-body">
-              <h5 class="card-title">SOLAR WATER HEATER</h5>
+              <h5 class="card-title">SOLAR ZATKA MACHINE</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
                 <a href="#" class="btn btn-custom">Details</a>
@@ -251,13 +254,79 @@
             </div>
           </div>
         </div>
-
-        <!-- Product Card -->
+        <!-- Product Card  4 -->
         <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="250">
           <div class="product-card h-100">
-            <img src="assets/images/SOLAR-ZATKA-MECHIONR.jpg" class="card-img-top" alt="Solar Zatka Machine">
+            <img src="assets/images/10kva_voltage_stabilize_150v_ac_to_290v_ac.jpeg" class="card-img-top"
+              alt="Solar Zatka Machine">
             <div class="card-body">
-              <h5 class="card-title">SOLAR ZATKA MACHINE</h5>
+              <h5 class="card-title">Voltage Stabilize (10 kva)</h5>
+              <div class="d-flex justify-content-center gap-2">
+                <a href="#" class="btn btn-outline-custom">Enquiry</a>
+                <a href="#" class="btn btn-custom">Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Product Card  5 -->
+        <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="250">
+          <div class="product-card h-100">
+            <img src="assets/images/20_watt_led_garden_light.jpeg" class="card-img-top" alt="Solar Zatka Machine">
+            <div class="card-body">
+              <h5 class="card-title">Led Garden Light (20 Watt)</h5>
+              <div class="d-flex justify-content-center gap-2">
+                <a href="#" class="btn btn-outline-custom">Enquiry</a>
+                <a href="#" class="btn btn-custom">Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Product Card  6  -->
+        <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="250">
+          <div class="product-card h-100">
+            <img src="assets/images/20_watt_mono_solar_panel.jpeg" class="card-img-top" alt="Solar Zatka Machine">
+            <div class="card-body">
+              <h5 class="card-title">Mono Solar Panel (20 Watt)</h5>
+              <div class="d-flex justify-content-center gap-2">
+                <a href="#" class="btn btn-outline-custom">Enquiry</a>
+                <a href="#" class="btn btn-custom">Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Product Card  7 -->
+        <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="250">
+          <div class="product-card h-100">
+            <img src="assets/images/200_lpd_solar_water_heater.jpeg" class="card-img-top" alt="Solar Zatka Machine">
+            <div class="card-body">
+              <h5 class="card-title">Solar Water Heater (200 Lpd)</h5>
+              <div class="d-flex justify-content-center gap-2">
+                <a href="#" class="btn btn-outline-custom">Enquiry</a>
+                <a href="#" class="btn btn-custom">Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Product Card  8 -->
+        <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="250">
+          <div class="product-card h-100">
+            <img src="assets/images/500_lpd_Solar_water_heater.jpeg" class="card-img-top" alt="Solar Zatka Machine">
+            <div class="card-body">
+              <h5 class="card-title">Solar Water Heater (500 Lpd)</h5>
+              <div class="d-flex justify-content-center gap-2">
+                <a href="#" class="btn btn-outline-custom">Enquiry</a>
+                <a href="#" class="btn btn-custom">Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Product Card  9  -->
+        <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="250">
+          <div class="product-card h-100">
+            <img src="assets/images/850_1250_va_solar_Mppt_invertor.jpeg" class="card-img-top"
+              alt="Solar Zatka Machine">
+            <div class="card-body">
+              <h5 class="card-title">Solar Mppt Invertor (850/1250 va)</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
                 <a href="#" class="btn btn-custom">Details</a>
@@ -535,70 +604,71 @@
   <!-- collections end -->
 
   <!-- contact us  -->
-<section class="contact-section-dark py-5" id="contact">
-  <div class="container">
+  <section class="contact-section-dark py-5" id="contact">
+    <div class="container">
 
-    <!-- Title -->
-    <div class="text-center mb-5">
-      <h2 class="mb-3 text-white" data-aos="fade-up">Contact Us</h2>
-      <p class="text-white-50" data-aos="fade-up" data-aos-delay="100">
-        Have a question or business inquiry? We’re always happy to assist you.
-      </p>
-    </div>
-
-    <div class="row g-5 align-items-center">
-
-      <!-- Map -->
-      <div class="col-lg-6" data-aos="fade-right">
-        <div class="rounded-4 overflow-hidden shadow-lg map-wrapper border border-success border-opacity-50">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15665.337610947608!2d76.9527770832641!3d11.01351753903806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s%20335A%20Ramachandra%20layout%2C%20Ramnagar%2C%20Coimbatore%20-%20641009!5e0!3m2!1sen!2sin!4v1758619896304!5m2!1sen!2sin"
-            width="100%" height="420" style="border:0;" loading="lazy"
-            allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+      <!-- Title -->
+      <div class="text-center mb-5">
+        <h2 class="mb-3 text-white" data-aos="fade-up">Contact Us</h2>
+        <p class="text-white-50" data-aos="fade-up" data-aos-delay="100">
+          Have a question or business inquiry? We’re always happy to assist you.
+        </p>
       </div>
 
-      <!-- Contact Form -->
-      <div class="col-lg-6" data-aos="fade-left">
-        <div class="contact-glass-box p-4 p-md-5 shadow-lg rounded-4">
+      <div class="row g-5 align-items-center">
 
-          <h4 class="mb-4 text-center text-white">We’d love to hear from you</h4>
-
-          <form id="contactForm" onsubmit="return sendToWhatsApp();">
-            <div class="row g-3">
-
-              <div class="col-12">
-                <input type="text" class="form-control neon-input" id="name" placeholder="Your Name" required>
-              </div>
-
-              <div class="col-md-6">
-                <input type="email" class="form-control neon-input" id="email" placeholder="Email Address" required>
-              </div>
-
-              <div class="col-md-6">
-                <input type="tel" class="form-control neon-input" id="phone" placeholder="Phone Number" required>
-              </div>
-
-              <div class="col-12">
-                <textarea class="form-control neon-input" id="message" rows="4" placeholder="Your Message" required></textarea>
-              </div>
-
-              <div class="text-center mt-2">
-                <button type="submit" class="btn btn-success px-4 py-2 btn-lg shadow">
-                  <i class="bi bi-whatsapp"></i> Send via WhatsApp
-                </button>
-              </div>
-
-            </div>
-          </form>
-
+        <!-- Map -->
+        <div class="col-lg-6" data-aos="fade-right">
+          <div class="rounded-4 overflow-hidden shadow-lg map-wrapper border border-success border-opacity-50">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15665.337610947608!2d76.9527770832641!3d11.01351753903806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s%20335A%20Ramachandra%20layout%2C%20Ramnagar%2C%20Coimbatore%20-%20641009!5e0!3m2!1sen!2sin!4v1758619896304!5m2!1sen!2sin"
+              width="100%" height="420" style="border:0;" loading="lazy" allowfullscreen
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
+
+        <!-- Contact Form -->
+        <div class="col-lg-6" data-aos="fade-left">
+          <div class="contact-glass-box p-4 p-md-5 shadow-lg rounded-4">
+
+            <h4 class="mb-4 text-center text-white">We’d love to hear from you</h4>
+
+            <form id="contactForm" onsubmit="return sendToWhatsApp();">
+              <div class="row g-3">
+
+                <div class="col-12">
+                  <input type="text" class="form-control neon-input" id="name" placeholder="Your Name" required>
+                </div>
+
+                <div class="col-md-6">
+                  <input type="email" class="form-control neon-input" id="email" placeholder="Email Address" required>
+                </div>
+
+                <div class="col-md-6">
+                  <input type="tel" class="form-control neon-input" id="phone" placeholder="Phone Number" required>
+                </div>
+
+                <div class="col-12">
+                  <textarea class="form-control neon-input" id="message" rows="4" placeholder="Your Message"
+                    required></textarea>
+                </div>
+
+                <div class="text-center mt-2">
+                  <button type="submit" class="btn btn-success px-4 py-2 btn-lg shadow">
+                    <i class="bi bi-whatsapp"></i> Send via WhatsApp
+                  </button>
+                </div>
+
+              </div>
+            </form>
+
+          </div>
+        </div>
+
       </div>
 
     </div>
-
-  </div>
-</section>
+  </section>
 
   <!-- Footer -->
   <footer class="bg-dark text-white pt-5 pb-4" data-aos="fade-up" data-aos-delay="100">
