--- a/index.html
+++ b/index.html
@@ -598,6 +598,33 @@
           </div>
         </div>
 
+
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
+          <div class="service-card h-100">
+            <img src="assets/images/850_1250_va_solar_Mppt_invertor.jpeg" class="collection-img" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
+          <div class="service-card h-100">
+            <img src="assets/images/500_lpd_Solar_water_heater.jpeg" class="collection-img" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
+          <div class="service-card h-100">
+            <img src="assets/images/200_lpd_solar_water_heater.jpeg" class="collection-img" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
+          <div class="service-card h-100">
+            <img src="assets/images/20_watt_mono_solar_panel.jpeg" class="collection-img" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
+          <div class="service-card h-100">
+            <img src="assets/images/10kva_voltage_stabilize_150v_ac_to_290v_ac.jpeg" class="collection-img" alt="">
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
