--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <img src="assets/images/10kva_voltage_stabilize_150v_ac_to_290v_ac.jpeg" class="card-img-top"
               alt="Solar Zatka Machine">
             <div class="card-body">
-              <h5 class="card-title">Voltage Stabilize (10 kva)</h5>
+              <h5 class="card-title">Voltage Stabilizer (10 kva)</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
                 <a href="#" class="btn btn-custom">Details</a>
