--- a/index.html
+++ b/index.html
@@ -532,11 +532,11 @@
   </section>
   <!-- end faq -->
 
-  <!-- collections start -->
+  <!-- Gallery -->
   <section class="py-5 services-section text-white" id="collections">
     <div class="container text-center">
 
-      <h2 class="mb-4 section-title" data-aos="fade-up">Our Collections</h2>
+      <h2 class="mb-4 section-title" data-aos="fade-up">Our Gallery</h2>
       <p class="mb-5 section-subtitle" data-aos="fade-up" data-aos-delay="100">
         Explore our premium range of energy-efficient LED products, solar solutions, and outdoor lighting.
       </p>
@@ -622,6 +622,21 @@
         <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
           <div class="service-card h-100">
             <img src="assets/images/10kva_voltage_stabilize_150v_ac_to_290v_ac.jpeg" class="collection-img" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
+          <div class="service-card h-100">
+            <img src="assets/images/solarChargeController.jpeg" class="collection-img" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
+          <div class="service-card h-100">
+            <img src="assets/images/KVA _SOLAR_INVERTOR.jpeg" class="collection-img" alt="">
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="900">
+          <div class="service-card h-100">
+            <img src="assets/images/AC_BATTERY_CHARGER.jpeg" class="collection-img" alt="">
           </div>
         </div>
 
