changes done home

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <!-- header -->
   <nav class="navbar navbar-expand-lg sticky-navbar" data-aos="fade-down" data-aos-duration="1000">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.php">NINE STAR SYSTEMS</a>
+      <a class="navbar-brand" href="index.html">NINE STAR SYSTEMS</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,10 +97,10 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" href="index.php">Home</a>
+            <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.php">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -108,21 +108,21 @@
               Products
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">LED LIGHT</a></li>
-              <li><a class="dropdown-item" href="#">SOLAR STREET LIGHT</a></li>
-              <li><a class="dropdown-item" href="#">SOLAR ZATKA MACHINE</a></li>
-              <li><a class="dropdown-item" href="#">Voltage Stabilize</a></li>
-              <li><a class="dropdown-item" href="#">Led Garden Light</a></li>
-              <li><a class="dropdown-item" href="#">Mono Solar Panel</a></li>
-              <li><a class="dropdown-item" href="#">Solar Water Heater</a></li>
-              <li><a class="dropdown-item" href="#">Solar Mppt Invertor</a></li>
+              <li><a class="dropdown-item" href="LED_LIGHT.html">LED LIGHT</a></li>
+              <li><a class="dropdown-item" href="SOLAR_STREET_LIGHT.html">SOLAR STREET LIGHT</a></li>
+              <li><a class="dropdown-item" href="SOLAR_ZATKA_MACHINE.html">SOLAR ZATKA MACHINE</a></li>
+              <li><a class="dropdown-item" href="Voltage_Stabilize.html">Voltage Stabilize</a></li>
+              <li><a class="dropdown-item" href="Led Garden Light.html">Led Garden Light</a></li>
+              <li><a class="dropdown-item" href="Mono_Solar_Panel.html">Mono Solar Panel</a></li>
+              <li><a class="dropdown-item" href="Solar_Water_Heater.html">Solar Water Heater</a></li>
+              <li><a class="dropdown-item" href="Solar_Mppt_Invertor.html">Solar Mppt Invertor</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.php">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.php">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -133,8 +133,7 @@
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/images/Led_high_bay_light.jpeg" style="height:600px; width: auto;" class="d-block w-100"
-          alt="...">
+        <img src="assets/images/bner_2.jpg" style="height:600px; width: auto;" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="assets/images/Solar_water_heater.jpeg" style="height:600px; width: auto;" class="d-block w-100"
@@ -176,7 +175,7 @@
 
           <!-- Left Image -->
           <div class="col-md-6 about-img mb-4 mb-md-0" data-aos="zoom-in" data-aos-duration="1000">
-            <img src="assets/images/Led_high_bay_light.jpeg" alt="NINE STAR SYSTEMS">
+            <img src="assets/images/bner_2.jpg" alt="NINE STAR SYSTEMS">
           </div>
 
           <!-- Right Text -->
@@ -216,12 +215,12 @@
         <!-- Product Card 1 -->
         <div class="col-sm-10 col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="100">
           <div class="product-card h-100">
-            <img src="assets/images/Led_high_bay_light.jpeg" class="card-img-top" alt="LED Light">
+            <img src="assets/images/led_light_new.jpeg" class="card-img-top" alt="LED Light">
             <div class="card-body">
               <h5 class="card-title">LED LIGHT</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
-                <a href="#" class="btn btn-custom">Details</a>
+                <a href="LED_LIGHT.html" class="btn btn-custom">Details</a>
               </div>
             </div>
           </div>
@@ -235,7 +234,7 @@
               <h5 class="card-title">SOLAR STREET LIGHT</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
-                <a href="#" class="btn btn-custom">Details</a>
+                <a href="SOLAR_STREET_LIGHT.html" class="btn btn-custom">Details</a>
               </div>
             </div>
           </div>
@@ -249,7 +248,7 @@
               <h5 class="card-title">SOLAR ZATKA MACHINE</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
-                <a href="#" class="btn btn-custom">Details</a>
+                <a href="SOLAR_ZATKA_MACHINE.html" class="btn btn-custom">Details</a>
               </div>
             </div>
           </div>
@@ -263,7 +262,7 @@
               <h5 class="card-title">Voltage Stabilizer (10 kva)</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
-                <a href="#" class="btn btn-custom">Details</a>
+                <a href="Voltage_Stabilize.html" class="btn btn-custom">Details</a>
               </div>
             </div>
           </div>
@@ -276,7 +275,7 @@
               <h5 class="card-title">Led Garden Light (20 Watt)</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
-                <a href="#" class="btn btn-custom">Details</a>
+                <a href="Led Garden Light.html" class="btn btn-custom">Details</a>
               </div>
             </div>
           </div>
@@ -289,7 +288,7 @@
               <h5 class="card-title">Mono Solar Panel (20 Watt)</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
-                <a href="#" class="btn btn-custom">Details</a>
+                <a href="Mono_Solar_Panel.html" class="btn btn-custom">Details</a>
               </div>
             </div>
           </div>
@@ -302,7 +301,7 @@
               <h5 class="card-title">Solar Water Heater (200 Lpd)</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
-                <a href="#" class="btn btn-custom">Details</a>
+                <a href="Solar_Water_Heater.html" class="btn btn-custom">Details</a>
               </div>
             </div>
           </div>
@@ -317,7 +316,7 @@
               <h5 class="card-title">Solar Mppt Invertor (850/1250 va)</h5>
               <div class="d-flex justify-content-center gap-2">
                 <a href="#" class="btn btn-outline-custom">Enquiry</a>
-                <a href="#" class="btn btn-custom">Details</a>
+                <a href="Solar_Mppt_Invertor.html" class="btn btn-custom">Details</a>
               </div>
             </div>
           </div>
@@ -650,7 +649,7 @@
         <div class="col-lg-6" data-aos="fade-right">
           <div class="rounded-4 overflow-hidden shadow-lg map-wrapper border border-success border-opacity-50">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15665.337610947608!2d76.9527770832641!3d11.01351753903806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s%20335A%20Ramachandra%20layout%2C%20Ramnagar%2C%20Coimbatore%20-%20641009!5e0!3m2!1sen!2sin!4v1758619896304!5m2!1sen!2sin"
+              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d58665.50568677931!2d72.60209906976766!3d23.22145836203851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sB-62%20%2C%20G.I.D.C%20ELECTRONICES%20ESTATE%20%2CNEAR%20ARMY%20STORE%2CGandhinagar%2CGUJRAT!5e0!3m2!1sen!2sin!4v1765358744315!5m2!1sen!2sin"
               width="100%" height="420" style="border:0;" loading="lazy" allowfullscreen
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
@@ -708,8 +707,8 @@
         <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
           <h5 class="text-uppercase fw-bold mb-4">NINE STAR SYSTEMS</h5>
           <p>
-            We deliver natural and effective skincare & personal care products like Led Light and more — combining
-            tradition with science.
+            We deliver smart and sustainable solutions — from energy-efficient LED lights to eco-friendly solar water
+            heaters and more, blending modern technology with everyday convenience.
           </p>
         </div>
 
